# footprint

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  MANIFEST.in  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py  tox.ini
flask_nginx/: __main__.py  asgi.py  cli.py  config.py  core.py  irds.py  mailer.py  mysql.py  restartd.py  templating.py  utils.py  watch.py
flask_nginx/systemd/: nginx.py  systemd.py  utils.py
flask_nginx/templates/: celery.service  nginx-app.conf  nginx-upstream.conf  nginx.conf  systemd.mount  systemd.service  uvicorn.service
footprint/: __main__.py  citations.py  cli.py  config.py  core.py  ctx.py  dbsize.py  flask.py  flask_api.py  flask_cmds.py  irds.py  logo.py  mailer.py  mysql.py  mysqldump.py  remote.py  restartd.py  rsync.py  supervisor.py  systemd.py  templating.py  typed_flask.py  typescript.py  typing.py  url.py  utils.py  watch.py
footprint/systemd/: nginx.py  supervisor.py
footprint/templates/: celery.service  fetch.ts  js_api.tjs  nginx-app.conf  nginx-test.conf  nginx-upstream.conf  nginx.conf  require.html  secure-tunnel.service  ssl.conf  supervisord.ini  supervisord.service  systemd.mount  systemd.service
footprint/templates/web/: fetch-lib.js  fetch-lib.ts  js_api.tjs  require.html  require.tjs
footprint/unused/: dbsize.py  mysqldump.py
footprint/web/: ctx.py  datacls.py  flask_api.py  flask_cmds.py  typed_flask.py  typing.py
