[tool.poetry]
name = "footprint"
version = "0.7.17"
description = "install flask websites"
authors = ["arabidopsis <ian.castleden@uwa.edu.au>"]
readme = "README.md"
include = ['footprint/templates/**']

[tool.poetry.dependencies]
python = ">=3.8"
flask = ">=2.0"
psutil = { version = ">=5.4", optional = true }

[tool.poetry.extras]
psutil = ['psutil']

[tool.poetry.scripts]
footprint = "footprint.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
