[project]
name = "footprint"
version = "0.7.35"
description = "install flask websites"
authors = [{ name = "arabidopsis", email = "ian.castleden@uwa.edu.au" }]
requires-python = ">=3.8"
readme = "README.md"
dependencies = ["flask>=2.0"]

[project.optional-dependencies]
psutil = ["psutil>=5.4"]

[project.scripts]
footprint = "footprint.__main__:cli"

[tool.hatch.build.targets.sdist]
include = ["/footprint"]

[tool.hatch.build.targets.wheel]
include = ["/footprint"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
