[project]
name = "flask-nginx"
version = "0.9.9"
description = "install flask/quart/starlette websites into nginx and systemd"
authors = [{ name = "arabidopsis", email = "ian.castleden@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = ["jinja2>=3,<4", 'click>=8,<9']

[project.optional-dependencies]
psutil = ["psutil>=5.4"]

[project.scripts]
footprint = "flask_nginx.__main__:cli"

[tool.hatch.build.targets.sdist]
include = ["/flask_nginx"]

[tool.hatch.build.targets.wheel]
include = ["/flask_nginx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
